.provarCaches/00D5f000005vwGkEAI/objects/rstk__wodoc__c.object
<CustomObject>
    <description>wodoc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wodoc_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divwodocs</relationshipLabel>
        <relationshipName>divwodocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodoc_printcomponents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Print Components</description>
        <inlineHelpText>WO for which Components should be printed.</inlineHelpText>
        <label>Print Components for WO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__wodoc_printoperations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Print Operations</description>
        <inlineHelpText>WO for which Operations should be printed.</inlineHelpText>
        <label>Print Operations for WO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__wodoc_wocst__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>WO Travelers</relationshipLabel>
        <relationshipName>WODOC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WO Traveler</label>
    <nameField>
        <label>WODOC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Travelers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>